--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap');
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  text-align: center;
+  font-size: 150%;
+}
+.main_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+}
+
+h1{
+  font-family: 'Teko', sans-serif;
+  letter-spacing: 0.2rem;
+  margin-top: 1rem;
+}
+
+p{
+  font-family: sans-serif;
+}
+
+h2{
+  font-family: 'Teko', sans-serif;
+  color: #fff;
+}
+
+.container{
+  width: 650px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 1.5rem;
+}
+
+.box{
+  border: 1px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  padding: 1rem 2rem;
 }
